--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,10 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          push: false
+          push: true
           tags: noss/rusthello:latest
           cache-from: type=registry,ref=noss/rusthello-cache:latest
           cache-to: type=registry,ref=noss/rusthello-cache:latest,mode=max
