--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,13 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: noss/rusthello:latest
-          cache-from: type=registry,ref=noss/rusthello-cache:latest
-          cache-to: type=registry,ref=noss/rusthello-cache:latest,mode=max
+          tags: ghcr.io/noss/rusthello:latest
+          cache-from: type=registry,ref=ghcr.io/noss/rusthello-cache:latest
+          cache-to: type=registry,ref=ghcr.io/noss/rusthello-cache:latest,mode=max
 
