--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,6 +23,6 @@ jobs:
         with:
           push: true
           tags: ghcr.io/noss/rusthello:latest
-          cache-from: type=registry,ref=ghcr.io/noss/rusthello-cache:latest
-          cache-to: type=registry,ref=ghcr.io/noss/rusthello-cache:latest,mode=max
+          cache-from: type=registry,ref=ghcr.io/noss/rusthello:buildcache
+          cache-to: type=registry,ref=ghcr.io/noss/rusthello:buildcache,mode=max
 
