--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,8 +8,11 @@ jobs:
   compile:
     name: Compile
     runs-on: ubuntu-latest
+    container: rust:1.67
     steps:
       - uses: actions/checkout@v3
+      - run: cargo install --path .
+      - run: find target -ls
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
