--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ jobs:
   compile:
     name: Compile
     runs-on: ubuntu-latest
-    container: rust:1.67
+    container: rust:1.67-alpine
     steps:
       - uses: actions/checkout@v3
       - run: cargo install --path .
