--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: cargo install --path .
-      - run: find target -ls
+      - run: find target
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
