--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,8 +11,8 @@ jobs:
     container: rust:1.67-alpine
     steps:
       - uses: actions/checkout@v3
-      - run: cargo install --path .
-      - run: find target
+      - run: cargo build --release 
+      - run: find .
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
