--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,13 +6,25 @@ on:
 
 jobs:
   compile:
-    name: Compile
     runs-on: ubuntu-latest
-    container: rust:1.67-alpine
+    container: rust:1.67
     steps:
       - uses: actions/checkout@v3
       - run: cargo build --release 
-      - run: find .
+      - name: Save build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: release-build
+          path: |
+            target
+  release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download release-build
+        uses: actions/download-artifact@v3
+        with:
+          name: release-build
+      - run: find target
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
