--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,7 @@ on:
       - main
 
 jobs:
-  compile:
+  compiler:
     runs-on: ubuntu-latest
     container: rust:1.67
     steps:
@@ -17,8 +17,9 @@ jobs:
           name: release-build
           path: |
             target
-  release:
+  releaser:
     runs-on: ubuntu-latest
+    needs: compiler
     steps:
       - name: Download release-build
         uses: actions/download-artifact@v3
