--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: release-build
-      - run: find release-build
+      - run: find .
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
