--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,8 @@ jobs:
         with:
           name: release-build
       - run: find .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -38,6 +40,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          context: .
           tags: ghcr.io/noss/rusthello:latest
           cache-from: type=registry,ref=ghcr.io/noss/rusthello:buildcache
           cache-to: type=registry,ref=ghcr.io/noss/rusthello:buildcache,mode=max
