--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           name: release-build
           path: |
-            target
+            target/release
   releaser:
     runs-on: ubuntu-latest
     needs: compiler
