--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,8 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: release-build
-      - run: find .
+      - run: chmod +x hellorust
+      - run: find . -ls
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to GitHub Container Registry
